--- a/common/common/CMakeLists.txt
+++ b/common/common/CMakeLists.txt
@@ -40,6 +40,13 @@ else (OpenCV_FOUND)
   message(FATAL_ERROR "OpenCV not found.")
 endif()
 
+# add root directory in include path
+get_filename_component(PARENT_DIR ${CMAKE_SOURCE_DIR} DIRECTORY)
+include_directories(${PARENT_DIR})
+
+# set default build type
+set(CMAKE_BUILD_TYPE Release CACHE STRING "Set default build type to release")
+
 # set default debug and release output directory
 file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 
