--- a/MNN/deploy/CMakeLists.txt
+++ b/MNN/deploy/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB MNN_CORE_FILES mobilenet_ssd_detector.h mobilenet_ssd_detector.cpp)
 
 # yh_mnn dll library
 add_library(yh_mnn SHARED ${MNN_CORE_FILES})
-target_link_libraries(yh_mnn ${OpenCV_LIBS} ${MNN_LIBRARY})
+target_link_libraries(yh_mnn ${OpenCV_LIBS} ${MNN_LIBRARY} glog::glog)
 
 # add test
 add_executable(test_mobilenet_ssd test_mobilenet_ssd.cpp)
