--- a/HelloWorld/HelloWorld_himix200/app/makefile
+++ b/HelloWorld/HelloWorld_himix200/app/makefile
@@ -5,10 +5,12 @@ STUDENT:=/home/huanyuan/code/demo/HelloWorld/Student_himix200/release/app
 CC		:= arm-himix200-linux-g++ 
 CFLAGS	:= -mcpu=cortex-a53 -mfloat-abi=softfp -mfpu=neon-vfpv4 -mno-unaligned-access -fno-aggressive-loop-optimizations \
 -W -Wall -O3 -std=c++11 -DNNIE -fpic -fno-strict-aliasing -traditional -Wno-reorder -Wno-char-subscripts
-INCLUDE	:= -I$(STUDENT)/include -I/home/huanyuan/code/eigen-git-mirror/build/install/include/eigen3 -I/home/huanyuan/code/kaldi/hisi/kaldi/tools/openfst-1.6.7/include/
-LIBS	:= -L$(STUDENT)/lib -lstduent -ldl
-STATIC_LIB:= /home/huanyuan/code/kaldi/hisi/kaldi/tools/openfst-1.6.7/lib/libfst.a
-LIBS	+= $(STATIC_LIB)
+INCLUDE	:= -I$(STUDENT)/include -I/home/huanyuan/code/eigen-git-mirror/build/install/include/eigen3 \
+-I/home/huanyuan/code/kaldi/hisi/kaldi/tools/openfst-1.6.7/include -I/home/huanyuan/code/kaldi/hisi/OpenBLAS/install/include \
+-I/home/huanyuan/code/kaldi/hisi/alsa-lib-1.1.7/install/include
+LIBS	:= -L$(STUDENT)/lib -lstduent -L/home/huanyuan/code/kaldi/hisi/alsa-lib-1.1.7/install/lib -lasound
+STATIC_LIB:= /home/huanyuan/code/kaldi/hisi/kaldi/tools/openfst-1.6.7/lib/libfst.a /home/huanyuan/code/kaldi/hisi/OpenBLAS/install/lib/libopenblas.a
+LIBS	+= $(STATIC_LIB) -ldl -lpthread 
 
 SRC_DIR	+=$(ROOT_DIR)/demo
 SRC_FILE_CPP+=$(foreach d, $(SRC_DIR), $(wildcard $(addprefix $(d)\/*, .cpp))) 
