--- a/common/common/example/csrc/CMakeLists.txt
+++ b/common/common/example/csrc/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(test_thread test_thread.cpp)
 target_link_libraries(test_thread -pthread)
+
+add_executable(demo demo.cpp)
+target_link_libraries(demo)
