--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,7 @@
             "program": "${workspaceFolder}/speech/lib/Debug/online2-wav-nnet3-latgen-faster",
             "args": ["--do-endpointing=false", 
                 "--online=true",
+                "--config=/home/huanyuan/code/kaldi/model/multi_cn_chainmodel/conf/endpoint.conf", 
                 "--ivector-extraction-config=/home/huanyuan/code/kaldi/model/multi_cn_chainmodel/conf/ivector_extractor.conf", 
                 "--online-pitch-config=/home/huanyuan/code/kaldi/model/multi_cn_chainmodel/conf/online_pitch.conf", 
                 "--mfcc-config=/home/huanyuan/code/kaldi/model/multi_cn_chainmodel/conf/mfcc_hires.conf",
@@ -106,7 +107,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/speech/lib/Debug/online2-wav-nnet3-latgen-faster",
-            "args": ["--do-endpointing=false", 
+            "args": ["--do-endpointing=true", 
                 "--online=true",
                 "--config=/home/huanyuan/code/kaldi/demo/chain/online.conf", 
                 "--mfcc-config=/home/huanyuan/code/kaldi/demo/chain/mfcc.conf", 
