--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -107,8 +107,8 @@
                 "--ivector-extraction-config=/home/huanyuan/code/kaldi/model/multi_cn_chainmodel/conf/ivector_extractor.conf", 
                 "--online-pitch-config=/home/huanyuan/code/kaldi/model/multi_cn_chainmodel/conf/online_pitch.conf", 
                 "--mfcc-config=/home/huanyuan/code/kaldi/model/multi_cn_chainmodel/conf/mfcc_hires.conf",
-                "--max-active=7000", 
-                "--beam=15.0", 
+                "--max-active=3000", 
+                "--beam=10.0", 
                 "--lattice-beam=6.0", 
                 "--acoustic-scale=1.0", 
                 "--word-symbol-table=/home/huanyuan/code/kaldi/model/multi_cn_chainmodel/model/words.txt", 
@@ -168,12 +168,12 @@
             "args": ["--verbose=1", 
                 "--rt-min=0.8",
                 "--rt-max=0.85", 
-                "--max-active=4000", 
-                "--beam=12.0", 
+                "--max-active=7000", 
+                "--beam=15.0", 
                 "--acoustic-scale=0.0769", 
                 "--left-context=4", 
                 "--right-context=4", 
-                "scp:./wav.scp", 
+                "scp:/home/huanyuan/code/kaldi/demo/wav/wav_16k.scp", 
                 "/home/huanyuan/code/kaldi/model/HMM_MDL/gmm-hmm/final.mdl", 
                 "/home/huanyuan/code/kaldi/model/HMM_MDL/gmm-hmm/HCLG.fst", 
                 "/home/huanyuan/code/kaldi/model/HMM_MDL/gmm-hmm/words.txt",
