code for test_mobilenet_ssd_opencv.cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "scoped_allocator": "cpp",
         "regex": "cpp",
         "random": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "*.ipp": "cpp"
     }
 }
