--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -52,10 +52,12 @@
             "name": "(gdb) test_mobilenet_ssd",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/OpenVINO/lib/Debug/test_mobilenet_ssd",
+            // "program": "${workspaceFolder}/OpenVINO/lib/Debug/test_mobilenet_ssd",
+            "program": "${workspaceFolder}/OpenVINO/lib/Release/test_mobilenet_ssd",
             "args": ["--logtostderr"],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/OpenVINO/lib/Debug",
+            // "cwd": "${workspaceFolder}/OpenVINO/lib/Debug",
+            "cwd": "${workspaceFolder}/OpenVINO/lib/Release",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
