--- a/OpenVINO/deploy/CMakeLists.txt
+++ b/OpenVINO/deploy/CMakeLists.txt
@@ -1,18 +1,19 @@
 # set core files
-file(GLOB OPENVINO_CORE_FILES mobilenet_ssd_detector.h mobilenet_ssd_detector.cpp)
+file(GLOB OPENVINO_CORE_FILES inference_detection_openvino.h inference_detection_openvino.cpp)
 
 # yh_mnn dll library
-add_library(yh_openvino SHARED ${OPENVINO_CORE_FILES})
-target_link_libraries(yh_openvino ${OpenCV_LIBS} ${OpenVINO_LIBRARY_DIRS} glog::glog)
+add_library(librmai_mosaic SHARED ${OPENVINO_CORE_FILES})
+target_link_libraries(librmai_mosaic ${OpenCV_LIBS} ${OpenVINO_LIBRARY_DIRS} glog::glog)
+target_link_libraries(librmai_mosaic -fvisibility=hidden)
 
 # add test
 add_executable(test_mobilenet_ssd test_mobilenet_ssd.cpp)
-target_link_libraries(test_mobilenet_ssd yh_openvino ${OpenCV_LIBS})
+target_link_libraries(test_mobilenet_ssd librmai_mosaic ${OpenCV_LIBS})
 target_link_libraries(test_mobilenet_ssd debug ${YH_COMMON_UTILITY_LIBRARY_DEBUG} optimized ${YH_COMMON_UTILITY_LIBRARY_RELEASE})
 target_link_libraries(test_mobilenet_ssd glog::glog)
 
 add_executable(test_mobilenet_ssd_thread test_mobilenet_ssd_thread.cpp)
-target_link_libraries(test_mobilenet_ssd_thread yh_openvino ${OpenCV_LIBS})
+target_link_libraries(test_mobilenet_ssd_thread librmai_mosaic ${OpenCV_LIBS})
 target_link_libraries(test_mobilenet_ssd_thread debug ${YH_COMMON_UTILITY_LIBRARY_DEBUG} optimized ${YH_COMMON_UTILITY_LIBRARY_RELEASE})
 target_link_libraries(test_mobilenet_ssd_thread glog::glog)
 
@@ -22,6 +23,6 @@ target_link_libraries(test_mobilenet_ssd_opencv debug ${YH_COMMON_UTILITY_LIBRAR
 target_link_libraries(test_mobilenet_ssd_opencv glog::glog)
 
 add_executable(test_mobilenet_ssd_yuv test_mobilenet_ssd_yuv.cpp)
-target_link_libraries(test_mobilenet_ssd_yuv yh_openvino ${OpenCV_LIBS})
+target_link_libraries(test_mobilenet_ssd_yuv librmai_mosaic ${OpenCV_LIBS})
 target_link_libraries(test_mobilenet_ssd_yuv debug ${YH_COMMON_UTILITY_LIBRARY_DEBUG} optimized ${YH_COMMON_UTILITY_LIBRARY_RELEASE})
 target_link_libraries(test_mobilenet_ssd_yuv glog::glog)
