--- a/common/common/example/csrc/CMakeLists.txt
+++ b/common/common/example/csrc/CMakeLists.txt
@@ -7,5 +7,8 @@ target_link_libraries(test_reference_pointers)
 add_executable(test_struct_size test_struct_size.cpp)
 target_link_libraries(test_struct_size)
 
+add_executable(test_unique_ptr test_unique_ptr.cpp test_unique_ptr.hpp)
+target_link_libraries(test_unique_ptr)
+
 add_executable(demo demo.cpp)
 target_link_libraries(demo)
