test_mosaic_api for avi

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,9 +48,13 @@
         "request": "launch",
         "program": "${workspaceFolder}/OpenVINO/lib/Debug/test_mosaic_api",
         "args": [
-            "--yuv_path=/home/huanyuan/code/images_result/taxiface.yuv",
-            "--yuv_imwidth=1280",
-            "--yuv_imheight=720",
+            // "--data_path=/home/huanyuan/code/yuv/test_taxi_face.avi",
+            "--data_path=/home/huanyuan/code/yuv/test_taxi_face.yuv",
+            "--imwidth=1280",
+            "--imheight=720",
+            // "--data_path=/home/huanyuan/code/yuv/test_license_plate.yuv",
+            // "--imwidth=2592",
+            // "--imheight=1920",
             "--model_type=2",
             "--logtostderr"],
         "stopAtEntry": false,
