--- a/OpenVINO/deploy/CMakeLists.txt
+++ b/OpenVINO/deploy/CMakeLists.txt
@@ -32,6 +32,6 @@ add_executable(test_detection_avi test_detection_avi.cpp)
 target_link_libraries(test_detection_avi rmai_mosaic ${OpenCV_LIBS})
 target_link_libraries(test_detection_avi glog::glog)
 
-# add_executable(test_mosaic_api test_mosaic_api.cpp)
-# target_link_libraries(test_mosaic_api rmai_mosaic ${OpenCV_LIBS})
-# target_link_libraries(test_mosaic_api glog::glog)
+add_executable(test_mosaic_api test_mosaic_api.cpp)
+target_link_libraries(test_mosaic_api rmai_mosaic ${OpenCV_LIBS})
+target_link_libraries(test_mosaic_api glog::glog)
