--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -47,12 +47,13 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}/OpenVINO/lib/Debug/test_mosaic_api",
+        // "program": "${workspaceFolder}/OpenVINO/lib/Release/test_mosaic_api",
         "args": [
-            // "--data_path=/home/huanyuan/code/yuv/test_taxi_face.avi",
-            "--data_path=/home/huanyuan/code/yuv/test_taxi_face.yuv",
+            "--data_path=/home/huanyuan/data/yuv/test_taxi_face.avi",
+            // "--data_path=/home/huanyuan/data/yuv/test_taxi_face.yuv",
             "--imwidth=1280",
             "--imheight=720",
-            // "--data_path=/home/huanyuan/code/yuv/test_license_plate.yuv",
+            // "--data_path=/home/huanyuan/data/yuv/test_license_plate.yuv",
             // "--imwidth=2592",
             // "--imheight=1920",
             "--model_type=2",
