/test_detection_picture_thread_init.cpp

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,44 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "name": "(gdb) test_detection_picture_thread_init",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/OpenVINO/lib/Debug/test_detection_picture_thread_init",
+            "args": ["--logtostderr"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/OpenVINO/lib/Debug",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+    {
+        "name": "(gdb) test_detection_picture_thread",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "${workspaceFolder}/OpenVINO/lib/Debug/test_detection_picture_thread",
+        "args": ["--logtostderr"],
+        "stopAtEntry": false,
+        "cwd": "${workspaceFolder}/OpenVINO/lib/Debug",
+        "environment": [],
+        "externalConsole": false,
+        "MIMode": "gdb",
+        "setupCommands": [
+            {
+                "description": "Enable pretty-printing for gdb",
+                "text": "-enable-pretty-printing",
+                "ignoreFailures": true
+            }
+        ]
+    },
     {
         "name": "(gdb) test_ssd_face",
         "type": "cppdbg",
