--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,25 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "(gdb) test_mosaic_api_thread",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/OpenVINO/lib/Debug/test_mosaic_api_thread",
+            "args": ["--logtostderr"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/OpenVINO/lib/Debug/",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "name": "(gdb) test_detection_picture_thread_init",
             "type": "cppdbg",
             "request": "launch",
